[bug] align issue

--- a/src/main/resources/static/css/yonghyun/index.css
+++ b/src/main/resources/static/css/yonghyun/index.css
@@ -368,6 +368,7 @@ section.programing_section div.programing_group h2 {
 }
 
 section.programing_section div.programing_group span.programing_description {
+    display: block;
     text-align: center;
 }
 
